# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,7 @@ import healthRouter from "./health";
 import usersRouter from "./users";
 import lecturesRouter from "./lectures";
 import tasksRouter from "./tasks";
+import questionsRouter from "./questions";
 import chatRouter from "./chat";
 
 const router: IRouter = Router();
@@ -11,6 +12,7 @@ router.use(healthRouter);
 router.use(usersRouter);
 router.use(lecturesRouter);
 router.use(tasksRouter);
+router.use(questionsRouter);
 router.use(chatRouter);
 
 export default router;
