# lib/db/src/schema/index.ts
@@ -1,3 +1,4 @@
 export * from "./users";
 export * from "./lectures";
 export * from "./tasks";
+export * from "./questions";
